Re-using the popup results in a thrown exception

--- a/MauiApp1/MauiApp1/NewPage1.xaml
+++ b/MauiApp1/MauiApp1/NewPage1.xaml
@@ -15,7 +15,7 @@
                     Margin="10,0,0,0"
                     FontAttributes="Bold"
                     FontSize="16"
-                    Text="{x:Binding .}" />
+                    Text="{x:Bind this}" />
             </DataTemplate>
         </CollectionView.ItemTemplate>
     </CollectionView>
