--- a/MauiApp1/MauiApp1/PopupPageTest.xaml
+++ b/MauiApp1/MauiApp1/PopupPageTest.xaml
@@ -4,15 +4,19 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:animations="clr-namespace:MPowerKit.Popups.Animations;assembly=MPowerKit.Popups"
+    xmlns:mauiApp1="clr-namespace:MauiApp1"
     xmlns:popup="clr-namespace:MPowerKit.Popups;assembly=MPowerKit.Popups"
+    x:Name="Root"
     Title="PopupPageTest"
+    x:DataType="mauiApp1:PopupPageTest"
+    BindingContext="{Reference Root}"
     CloseOnBackgroundClick="True">
 
     <popup:PopupPage.Animation>
         <animations:ScaleAnimation
-            DurationIn="200"
-            DurationOut="150"
-            EasingIn="{x:Static Easing.BounceOut}"
+            DurationIn="00:00:00.3"
+            DurationOut="00:00:00.15"
+            EasingIn="{x:Static Easing.SpringOut}"
             EasingOut="{x:Static Easing.Linear}"
             PositionIn="Bottom"
             PositionOut="Center"
