--- a/MauiApp1/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MauiApp1/MainPage.xaml
@@ -3,10 +3,15 @@
     x:Class="MauiApp1.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:animations="clr-namespace:MPowerKit.Popups.Animations;assembly=MPowerKit.Popups"
+    xmlns:mauiApp1="clr-namespace:MauiApp1"
     xmlns:regions="clr-namespace:MPowerKit.Regions;assembly=MPowerKit.Regions">
 
     <ScrollView>
         <VerticalStackLayout Padding="30,0" Spacing="25">
+
+            <mauiApp1:PopupPageTest x:Name="Popup" />
+
             <Image
                 Aspect="AspectFit"
                 HeightRequest="185"
