--- a/MauiApp1/MauiApp1/PopupPageTest.xaml
+++ b/MauiApp1/MauiApp1/PopupPageTest.xaml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<popup:PopupPage
+
+<mauiApp1:Popup
     x:Class="MauiApp1.PopupPageTest"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:animations="clr-namespace:MPowerKit.Popups.Animations;assembly=MPowerKit.Popups"
-    xmlns:mauiApp1="clr-namespace:MauiApp1"
-    xmlns:popup="clr-namespace:MPowerKit.Popups;assembly=MPowerKit.Popups"
-    x:Name="Root"
-    Title="PopupPageTest"
-    x:DataType="mauiApp1:PopupPageTest"
-    BindingContext="{Reference Root}"
-    CloseOnBackgroundClick="True">
-
-    <popup:PopupPage.Animation>
+    xmlns:mauiApp1="clr-namespace:MauiApp1">
+    <mauiApp1:Popup.Animation>
         <animations:ScaleAnimation
             DurationIn="00:00:00.3"
             DurationOut="00:00:00.15"
@@ -22,7 +16,7 @@
             PositionOut="Center"
             ScaleIn="0.8"
             ScaleOut="0.8" />
-    </popup:PopupPage.Animation>
+    </mauiApp1:Popup.Animation>
 
     <Border
         BackgroundColor="White"
@@ -35,4 +29,4 @@
             Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" />
     </Border>
-</popup:PopupPage>
+</mauiApp1:Popup>
